--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
     <a class="btn btn-outline-dark btn-round mb-3 no-button
               shadow-pop-bottom-left
               '
-              data-mdb-ripple-color='dark'>Submit" href="" role="button">Call to action</a>
+              data-mdb-ripple-color='dark'>Submit" href="" role="button">Create a Post</a>
   </div>
   <!-- Jumbotron -->
 </header>
