--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,105 +1,63 @@
- <!-- Pills navs -->
+<!-- Pills navs -->
 <section class="container w-50 mt-5">
-    <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+  <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
-        <a
-        class="nav-link active"
+      <a
+        class="nav-link "
         id="tab-login"
         data-mdb-toggle="pill"
         href="#pills-login"
         role="tab"
         aria-controls="pills-login"
         aria-selected="true"
-        >Login</a
-        >
+      >Login</a>
     </li>
-    <li class="nav-item" role="presentation">
-        <a
-        class="nav-link"
-        id="tab-register"
-        data-mdb-toggle="pill"
-        href="#pills-register"
-        role="tab"
-        aria-controls="pills-register"
-        aria-selected="false"
-        >Sign Up</a
-        >
-    </li>
-    </ul>
-    <!-- Pills navs -->
+    
+  </ul>
+  <!-- Pills navs -->
 
-    <!-- Pills content -->
-    <div class="tab-content">
-    <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-        <form id="loginForm">
-
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-            <input type="email" id="emailLogin" class="form-control" />
-            <label class="form-label" for="emailLogin">Email</label>
-        </div>
-
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-            <input type="password" id="passwordLogin" class="form-control" />
-            <label class="form-label" for="passwordLogin">Password</label>
-        </div>
-
-        <!-- Submit button -->
-        <button id="loginFormBtn" type="button" class='btn btn-outline-dark btn-block mb-3 no-button
-              shadow-pop-bottom-right
-              '
-              data-mdb-ripple-color='dark'
-        >Sign In</button>
-
-        </form>
-    </div>
-
-
-
-    <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-        <form id="signupForm">
-
-        <!-- Name input -->
-        <div class="form-outline mb-4">
-            <input type="text" id="regFirstName" class="form-control" required />
-            <label class="form-label" for="regFirstName">First Name</label>
-        </div>
-
+  <!-- Log In BELOW -->
+  <!-- Log In BELOW -->
+  <div class="tab-content">
+    <div
+      class="tab-pane fade show "
+      id="pills-login"
+      role="tabpanel"
+      aria-labelledby="tab-login"
+    >
+      <form id="loginForm">
         <!-- Username input -->
         <div class="form-outline mb-4">
-            <input type="text" id="regLastName" class="form-control" required />
-            <label class="form-label" for="regLastName">Last Name</label>
+          <input type="text" id="logUserName" class="form-control" required />
+          <label class="form-label" for="logUserName">Username</label>
         </div>
 
         <!-- Email input -->
         <div class="form-outline mb-4">
-            <input type="email" id="regEmail" class="form-control" required />
-            <label class="form-label" for="regEmail">Email</label>
+          <input type="email" id="logEmail" class="form-control"  required />
+          <label class="form-label" for="logEmail">Email</label>
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-4">
-            <input type="password" id="regPassword" class="form-control" required />
-            <label class="form-label" for="regPassword">Password</label>
-        </div>
-
-        <!-- Repeat Password input -->
-        <div class="form-outline mb-4">
-            <input type="password" id="regRepPassword" class="form-control" required />
-            <label class="form-label" for="regRepPassword">Repeat password</label>
+          <input type="password" id="logPassword" class="form-control"  required/>
+          <label class="form-label" for="logPassword">Password</label>
         </div>
 
         <!-- Submit button -->
-        <button id="registerBtn" type="button" class='btn btn-outline-dark btn-block mb-3 no-button
-              shadow-pop-bottom-right
-              '
-              data-mdb-ripple-color='dark'>Submit</button>
-        </form>
+        <button
+          id="loginFormBtn"
+          type="button"
+          class="btn btn-outline-dark btn-block mb-3 no-button shadow-pop-bottom-right"
+          data-mdb-ripple-color="dark"
+        >Login</button>
+
+      </form>
     </div>
-    </div>
-    <!-- Pills content -->
+
+   
+  </div>
+  <!-- Pills content -->
 </section>
 
-<script src="../public/js/logIn.js"></script>
-<script src="../public/js/signUp.js"></script>
+<script src="/js/logIn.js"></script>
