--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -72,10 +72,11 @@
           class="btn btn-outline-dark btn-block mb-3 no-button shadow-pop-bottom-right"
           data-mdb-ripple-color="dark"
         >Submit</button>
+        
       </form>
     </div>
 
   </div>
-
+<a href='/login' class='' style="color: black;">Already have an account? Log in</a>
 </section>
 <script src="/js/signUp.js"></script>
