--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,59 +1,83 @@
+{{!-- {{#if logged_in}} --}}
 
-    {{!-- {{#if logged_in}} --}}
-        <div class="container-fluid align-content-sm-center justify-content-center">
-  <div class="accordion accordion-borderless" id="accordionFlushExampleX">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingOneX">
-        <button class="accordion-button" type="button" data-mdb-toggle="collapse"
-          data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
-          Post #1
-        </button>
-      </h2>
-      <div id="flush-collapseOneX" class="accordion-collapse collapse show"
-        aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
-        <div class="accordion-body">
-          This is the first item's accordion body.
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingTwoX">
-        <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
-          data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
-          Post #2
-        </button>
-      </h2>
-      <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
-        data-mdb-parent="#accordionFlushExampleX">
-        <div class="accordion-body">
-          This is the second item's accordion body.
-          Let's imagine this being filled with some actual content.
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingThreeX">
-        <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
-          data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
-          Post #3
-        </button>
-      </h2>
-      <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
-        data-mdb-parent="#accordionFlushExampleX">
-        <div class="accordion-body">
-          This is the third item's accordion body.
-          Nothing more exciting happening here in terms of content, but just filling up
-          the space to make it look, at least at first glance, a bit more representative
-          of how this would look in a real-world application.
-        </div>
+
+
+
+
+
+<!-- POST -->
+  {{#each posts as |post|}}
+<div style="border: 2px solid red">
+
+    <label>
+      {{post.id}}
+    </label>
+
+    <h1>
+      {{post.p_title}}
+
+    </h1>
+    <p>
+      {{post.p_content}}
+
+    </p>
+
+</div>
+  {{/each}}
+
+  
+  {{!-- <div class="accordion accordion-borderless" id="accordionFlushExampleX">
+  {{#each posts as |post|}}
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOneX">
+      {{post.id}}
+      <button class="accordion-button" type="button" data-mdb-toggle="collapse"
+        data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
+        {{post.p_title}}
+      </button>
+    </h2>
+    <div id="flush-collapseOneX" class="accordion-collapse collapse show"
+      aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
+      <div class="accordion-body">
+         {{post.p_content}}
       </div>
     </div>
   </div>
-</div>
-        {{!-- {{else}}
-        
-        {{/if}} --}}
+    {{/each}}
+  
+</div> --}}
 
-
-
-
+{{!-- <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwoX">
+      <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+        data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
+        {{post.p_title}}
+      </button>
+    </h2>
+    <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
+      data-mdb-parent="#accordionFlushExampleX">
+      <div class="accordion-body">
+        Placeholder content for this accordion, which is intended to demonstrate the
+        <code>.accordion-flush</code> class. This is the second item's accordion body.
+        Let's imagine this being filled with some actual content.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThreeX">
+      <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+        data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
+        {{post.p_title}}
+      </button>
+    </h2>
+    <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
+      data-mdb-parent="#accordionFlushExampleX">
+      <div class="accordion-body">
+        Placeholder content for this accordion, which is intended to demonstrate the
+        <code>.accordion-flush</code> class. This is the third item's accordion body.
+        Nothing more exciting happening here in terms of content, but just filling up
+        the space to make it look, at least at first glance, a bit more representative
+        of how this would look in a real-world application.
+      </div>
+    </div>
+  </div> --}}
